--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: simple-api
-        image: $(AR_LOCATION)-docker.pkg.dev/$(PROJECT_ID)/$(AR_REPOSITORY)/$(IMAGE_NAME):$(IMAGE_TAG)
+        image: asia-northeast1-docker.pkg.dev/tomoki-sandbox/my-repo/simple-api:v1
         ports:
         - containerPort: 8080
         resources:
